# Discord-AI-Bot

./: .gitignore  Dockerfile  README.md  ai_clients.py  ai_logger.py  ai_services.py  assistant_ids.json  chatgpt_bot.py.old.py  chatgpt_bot.py.old2.py  chatgpt_discord_bot_v2.0.py  chatgpt_discord_bot_v2.2.py  chatgpt_discord_bot_v3.0.py  chatgpt_discord_bot_v4.1.py  chatgpt_discord_bot_v5.0.py  commands.py  config.py  database.py  discord_commands.py  docker-compose.yml  logger_config.py  main.py  message_monitor.py  pyproject.toml  requirements.txt  requirements.txt.pipreqs  role_color_manager.py  role_color_scheduler.py  run_bot_tests.py  state.py  task_manager.py  task_scheduler.py  test_message_monitor.py  user_requests.json  utilities.py  vector_store_id.json
app/: main.py
chatgpt_discord_bot_v5/: Dockerfile  bot.py  clients.py  commands.py  config.py  docker-compose.yml  logger_config.py  main.py  requirements.txt  utilities.py
config/: __init__.py  ai_config.py  base.py  bot_config.py  config.py  dashboard_config.py  storage_config.py  tasks.json
dashboard/: __init__.py  auth.py
data/: ai_interactions.db  messages.db
legacy/: chatgpt_discord_bot_v1.0.py  chatgpt_discord_bot_v2.1.py  chatgpt_discord_bot_v2.3.py  chatgpt_discord_bot_v3.1.py  chatgpt_discord_bot_v3.2.py  chatgpt_discord_bot_v4.0.py
old/: ai_clients.py.bak  clients.py.bak  commands.py.bak  scheduled_tasks.py.bak
tests/: test_discord_bot.py  test_message_monitor.py
tools/: generate_api_key.py  init_config_files.py
utils/: ai_logger.py  ai_services.py  database.py  (+4 more)
v5/: pyproject.toml
(+61 files in other folders)
