[tool.poetry]
name = "# follow the prompts to set up your project"
version = "0.1.0"
description = "# Add dependencies"
authors = ["poetry add discord.py openai python-dotenv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
